# zvec

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README.md  README_CN.md  pyproject.toml
.github/workflows/: 03-macos-linux-build.yml  04-android-build.yml  05-windows-build.yml  06-ios-build.yml  android_build.yml  clang_tidy.yml  nightly_coverage.yml
cmake/: bazel.cmake  option.cmake  utils.cmake
examples/c++/: CMakeLists.txt
python/tests/: test_collection.py  test_collection_fts.py  test_collection_fts_vector_hybrid.py  test_fts_query.py  test_params.py  test_query_executor.py  test_reranker.py
python/tests/detail/: test_collection_dql.py
python/zvec/: __init__.py  __init__.pyi
python/zvec/executor/: __init__.py  query_executor.py
python/zvec/extension/: multi_vector_reranker.py  qwen_rerank_function.py  rerank_function.py  sentence_transformer_rerank_function.py
python/zvec/model/: collection.py  doc.py
python/zvec/model/param/: __init__.pyi
scripts/: build_android.sh  generate_standard_tokenizer_unicode.py
src/ailego/: CMakeLists.txt
src/ailego/buffer/: block_eviction_queue.cc  parquet_hash_table.cc  vector_page_table.cc
src/ailego/io/: file.cc
src/ailego/math/: distance_matrix_euclidean_utility.i  distance_matrix_inner_product_utility.i  distance_matrix_mips_utility.i  euclidean_distance_matrix.h  euclidean_distance_matrix_fp16_avx.cc  euclidean_distance_matrix_fp16_avx512.cc  euclidean_distance_matrix_fp16_dispatch.cc  euclidean_distance_matrix_fp16_neon.cc  euclidean_distance_matrix_fp16_sse.cc  euclidean_distance_matrix_fp32_avx.cc  euclidean_distance_matrix_fp32_avx512.cc  euclidean_distance_matrix_fp32_dispatch.cc  euclidean_distance_matrix_fp32_neon.cc  euclidean_distance_matrix_fp32_sse.cc  euclidean_distance_matrix_int4_avx2.cc  euclidean_distance_matrix_int4_dispatch.cc  euclidean_distance_matrix_int4_sse.cc  euclidean_distance_matrix_int8_avx2.cc  euclidean_distance_matrix_int8_dispatch.cc  euclidean_distance_matrix_int8_sse.cc  hamming_distance_matrix.cc  hamming_distance_matrix.h  inner_product_matrix.h  inner_product_matrix_fp16_avx.cc  inner_product_matrix_fp16_avx512.cc  inner_product_matrix_fp16_dispatch.cc  inner_product_matrix_fp16_neon.cc  inner_product_matrix_fp32_avx.cc  inner_product_matrix_fp32_avx512.cc  inner_product_matrix_fp32_dispatch.cc  inner_product_matrix_fp32_neon.cc  inner_product_matrix_fp32_sse.cc  inner_product_matrix_int4_avx2.cc  inner_product_matrix_int4_dispatch.cc  inner_product_matrix_int4_sse.cc  inner_product_matrix_int8_avx2.cc  inner_product_matrix_int8_dispatch.cc  inner_product_matrix_int8_sse.cc  mips_euclidean_distance_matrix_fp16_avx.cc  mips_euclidean_distance_matrix_fp16_avx512.cc  (+17 more)
src/ailego/math_batch/: distance_batch.h  inner_product_distance_batch.h  inner_product_distance_batch_dispatch.cc  inner_product_distance_batch_impl_fp16_avx2.cc  inner_product_distance_batch_impl_fp16_avx512.cc  inner_product_distance_batch_impl_fp32_avx2.cc  inner_product_distance_batch_impl_int8_avx2.cc  inner_product_distance_batch_impl_int8_avx512.cc
src/binding/c/: c_api.cc
src/binding/python/model/: python_collection.cc  python_reranker.cc
src/binding/python/model/param/: python_param.cc
src/core/algorithm/cluster/: CMakeLists.txt
src/core/algorithm/hnsw/: hnsw_entity.h  hnsw_streamer.cc
src/core/algorithm/hnsw_rabitq/: hnsw_rabitq_register.cc  hnsw_rabitq_streamer.cc
src/core/interface/: index.cc
src/core/quantizer/: record_quantizer.h
src/core/utility/: buffer_storage.cc  utility_params.h
src/db/: collection.cc
src/db/common/: file_helper.h  global_resource.cc  rocbsdb_context.cc  rocksdb_context.cc
src/db/index/column/fts_column/tokenizer/: standard_tokenizer.cc  standard_tokenizer.h  standard_tokenizer_unicode.inc
src/db/index/common/: doc.cc  id_map.cc
src/db/index/segment/: segment.cc  segment.h  segment_helper.cc
src/db/index/storage/: bufferpool_forward_store.cc  lazy_record_batch_reader.h
src/db/index/storage/wal/: local_wal_file.cc
src/db/reranker/: reranker.cc
src/db/sqlengine/: sqlengine_impl.cc
src/include/zvec/: c_api.h
src/include/zvec/ailego/buffer/: block_eviction_queue.h  parquet_hash_table.h  vector_page_table.h
src/include/zvec/core/framework/: index_storage.h
src/include/zvec/core/interface/: index_param.h
src/include/zvec/db/: collection.h  reranker.h
tests/: CMakeLists.txt
tests/c/: c_api_test.c
tests/core/algorithm/flat/: flat_streamer_buffer_test.cc  flat_streamer_buffer_time_test.cc
tests/core/algorithm/hnsw/: hnsw_streamer_buffer_test.cc  hnsw_streamer_test.cc
tests/core/interface/: index_interface_test.cc
tests/db/: collection_test.cc  reranker_test.cc
tests/db/crash_recovery/: CMakeLists.txt  optimize_recovery_test.cc  utility.h  write_recovery_test.cc
tests/db/index/column/: vector_column_indexer_test.cc
tests/db/index/column/fts_column/: standard_tokenizer_test.cc
tests/db/index/common/: doc_test.cc
tests/db/index/segment/: segment_helper_test.cc  segment_test.cc
tests/db/index/storage/: bufferpool_store_test.cc  wal_file_test.cc
tests/db/sqlengine/: fts_parser_test.cc  mock_segment.h
tests/db_new/: CMakeLists.txt  README.md
tests/db_new/cmake/: db_tests.cmake
tests/db_new/common/: CMakeLists.txt  concurrent_roaring_bitmap_test.cc  config_test.cc  error_code_test.cc  profiler_test.cc  status_test.cc
tests/db_new/index/: CMakeLists.txt
tests/db_new/index/segment/: CMakeLists.txt  segment_test.cc
tests/db_new/shared/: db_tests.cmake  doc_factory.h  schema_factory.h  status_matchers.h
tests/db_new/shared/dense_128d_10k/: base.txt  groundtruth.txt  query.txt
tests/db_new/shared/testdata/: README.md
tools/core/: local_builder.cc  local_builder_original.cc
